# star-ground

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  app.py  cli.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-publish.yml  python-app.yml
.streamlit/: config.toml
examples/: README.md
examples/Pedal_Build_Pack_Complete/: My Inventory Updated.csv  Pedal Shopping List.csv  info.txt
examples/Star_Ground_Artifacts/: My Inventory Updated.csv  Shopping List.csv  info.txt
raw_boms/tayda/dynamics/: micro_amp_booster.txt  orange_squeezer.txt
raw_boms/tayda/fuzz/: bazz_fuzz.txt  big_muff.txt  muff_fuzz_overdrive.txt  satisfaction_fuzz.txt
raw_boms/tayda/modulation/: colorsound_tremolo.txt  dr_q.txt
raw_boms/tayda/overdrive/: bluesbreaker.txt  centaur_overdrive.txt  rat.txt
src/: README.md  bom_lib.py  constants.py  exporters.py  feedback.py  pdf_generator.py  presets.py
src/bom_lib/: __init__.py  classifier.py  constants.py  loader.py  manager.py  parser.py  presets.py  sourcing.py  types.py  utils.py
tests/: README.md  conftest.py  test_app.py  test_error_handling.py  test_package.py  test_parser.py  test_pdf_snapshots.py
tests/snapshots/: clean__Cataclysm-PedalPCB.pdf.json  clean__Gravitation-PedalPCB.pdf.json  clean__Kliche-PedalPCB.pdf.json  clean__LowTide-PedalPCB.pdf.json  clean__PaperScratcher-PedalPCB.pdf.json  clean__Sunflower-PedalPCB.pdf.json  dirty__Abyss.pdf.json  dirty__Arachnid.pdf.json  dirty__Circulator.pdf.json  dirty__Parentheses.pdf.json  dirty__PedalPCB-Triangulum.pdf.json
tools/: README.md  generate_presets.py
