[project]
name = "star-ground"
version = "2.3.0"
description = "Logistics engine for analog electronics"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fpdf2==2.8.5",
    "google-auth==2.48.0",
    "gspread==6.2.1",
    "pdfplumber==0.11.9",
    "requests==2.32.5",
    "streamlit==1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.6",
    "hypothesis==6.151.6",
    "mypy==1.19.1",
    "pandas-stubs",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.1",
    "types-cachetools",
    "types-cffi",
    "types-colorama",
    "types-defusedxml",
    "types-fpdf2",
    "types-jsonschema",
    "types-pexpect",
    "types-protobuf",
    "types-pyasn1",
    "types-pycurl",
    "types-pygments",
    "types-requests",
    "types-toml",
    "watchdog==6.0.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*", "app"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = "."
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.bumpversion]
current_version = "2.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
allow_dirty = false
commit = true
message = "chore: bump version {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "README.md"
search = "v{current_version}"
replace = "v{new_version}"

[tool.ruff]
# Target Python 3.13 for code generation and linting analysis
target-version = "py313"
line-length = 88
indent-width = 4

# Exclude common build/cache directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets:
# E, W: pycodestyle (standard linting)
# F: Pyflakes (error detection)
# I: isort (import sorting)
# B: flake8-bugbear (finds likely bugs and design problems)
# UP: pyupgrade (modernizes code, e.g., List[] -> list[])
# SIM: flake8-simplify (logic simplification)
# T20: flake8-print (Catch print() statements)
# PT:  flake8-pytest-style (Best practices for tests)
# C4:  flake8-comprehensions (Better list/dict comprehensions)
select = ["E", "F", "I", "B", "UP", "SIM", "T20", "PT", "C4"]

# Ignore E501 (Line too long) as ruff format handles line wrapping efficiently
ignore = ["E501"]

# Allow unused variables when underscored (e.g., for unpacking)
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
# Ensure 'src' is treated as a local application for import grouping
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["T201", "T203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
